--- a/HeavenofBooksWeb/HeavenofBooksWeb.csproj
+++ b/HeavenofBooksWeb/HeavenofBooksWeb.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\HeavenofBooks.Data\HeavenofBooks.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Customer\Controllers\" />
+  </ItemGroup>
+
 </Project>
