--- a/HeavenofBooksWeb/HeavenofBooksWeb.csproj
+++ b/HeavenofBooksWeb/HeavenofBooksWeb.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Customer\Controllers\" />
+    <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
 
 </Project>
