--- a/HeavenofBooks.Data/HeavenofBooks.DataAccess.csproj
+++ b/HeavenofBooks.Data/HeavenofBooks.DataAccess.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HeavenofBooks.Models\HeavenofBooks.Models.csproj" />
+    <ProjectReference Include="..\HeavenofBooks.Utility\HeavenofBooks.Utility.csproj" />
   </ItemGroup>
 
 </Project>
